Refactoring to new API with added Graph Windowing stuff. Should take 2 days